src/application/ingress/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ngc-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: nginx    
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
spec:
  tls:
    - hosts:
      - ngc.northeurope.cloudapp.azure.com
      secretName: tls-secret
  rules:
  - host: ngc.northeurope.cloudapp.azure.com
    http:
        paths:
        - path: /graphql(/|$)(.*)
          backend:
            serviceName: api-gateway
            servicePort: 80
        - path: /api/session(/|$)(.*)
          backend:
            serviceName: session-service
            servicePort: 80
        - path: /api/conference(/|$)(.*)
          backend:
            serviceName: conference-service
            servicePort: 80
        - path: /echo
          backend:
            serviceName: echo-service
            servicePort: 80
        - path: (/|$)(.*)
          backend:
            serviceName: web-app
            servicePort: 80
